# Anime-Bot

./: .gitignore  Cargo.toml  README.md  api.html  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: greetings.yml  jq.yml  njsscan-analysis.yml  node.js.yml
Images/8ball/: README.md  images.txt
Images/ahegao_avatar/: README.md  images.txt
Images/anal/: images.txt
Images/ass/: images.txt
Images/bdsm/: images.txt
Images/blowjob/: images.txt
Images/boobjob/: images.txt
Images/catboy/: images.txt  source.md
Images/creampie/: images.txt
Images/cuckold/: images.txt
Images/cum/: images.txt
Images/elves/: images.txt
Images/ero/: images.txt
Images/femdom/: images.txt
Images/foot/: images.txt
Images/glasses/: README.md  images.txt
Images/hentai/: images.txt
Images/incest/: images.txt
Images/lick/: images.txt
Images/masturbation/: images.txt
Images/nsfwNeko/: images.txt
Images/orgy/: images.txt
Images/panties/: images.txt
Images/public/: images.txt
Images/pussy/: images.txt
Images/sfwNeko/: images.txt
Images/slap/: images.txt
Images/tentacles/: images.txt
Images/thighs/: images.txt
Images/uniform/: images.txt
Images/yuri/: images.txt
Images/zettaiRyouiki/: images.txt
docs/: compacted_style.css  index.html  main.js  style.css  tailwind.config.js
legal/: PP.md  TOS.md
src/: bot.js  cmds.json  else.js  main.rs
src/cmds/: 2b.js  8ball.js  Asuna.js  Dustiness.js  Hitagi.js  Snake.js  Tsuyu.js  abigail.js  ahegao_avatar.js  amber.js  anal.js  (+201 more)
www/: Dank Memer.html  index.html
(+6 files in other folders)
