[package]
name = "anime_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.1"
chrono = "0.4.19"
lazy_static = "1.4.0"
mongodb = "2.0.2"
rand = "0.8.4"
regex = "1.5.4"
reqwest = "0.11.6"
serde_json = "1.0.70"
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "voice"] }
songbird = "0.2.2"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
